keppy kep contestga tayyorgarlik

--- a/src/app/modules/problems/components/problem-body/problem-body.component.scss
+++ b/src/app/modules/problems/components/problem-body/problem-body.component.scss
@@ -52,3 +52,7 @@ code {
 //  -ms-user-select: none; /* Internet Explorer/Edge */
 //  user-select: none;
 //}
+
+::ng-deep .problem-2173 .text-dark {
+  color: transparent !important;
+}
