--- a/src/app/modules/testing/ui/pages/tests-list/tests-list.page.html
+++ b/src/app/modules/testing/ui/pages/tests-list/tests-list.page.html
@@ -10,7 +10,7 @@
       <div class="row">
         @for (chapter of chapters; track chapter.id) {
           <div class="col-12 col-md-6 col-xl-4">
-            <chapter-with-tests-card [chapter]="chapter"></chapter-with-tests-card>
+            <chapter-with-tests-card [chapter]="chapter"/>
           </div>
         }
       </div>
