--- a/src/assets/scss/bootstrap/_cards.scss
+++ b/src/assets/scss/bootstrap/_cards.scss
@@ -27,7 +27,7 @@
   letter-spacing: 0.044rem;
 
   @include dark-layout {
-    background: inherit !important;
+    background: rgba(0, 0, 0, 0.25) !important;
   }
 
   .card-header {
