--- a/src/app/modules/account-settings/teams/team-card/team.component.html
+++ b/src/app/modules/account-settings/teams/team-card/team.component.html
@@ -1,4 +1,4 @@
-<kep-card [@fadeInOnEnter]="">
+<kep-card>
   <div class="card-header">
     <div class="card-title fw-semibold">
       {{ team.name }}
