--- a/src/app/modules/arena/pages/arena/arena.component.html
+++ b/src/app/modules/arena/pages/arena/arena.component.html
@@ -28,7 +28,7 @@
           />
         } @else {
           @for (arena of arenaList; track arena) {
-            <arena-list-card [@fadeInOnEnter] [arena]="arena"></arena-list-card>
+            <arena-list-card  [arena]="arena"></arena-list-card>
           }
         }
 
