--- a/src/app/modules/challenges/pages/challenges/sections/section-quickstart/section-quickstart.component.html
+++ b/src/app/modules/challenges/pages/challenges/sections/section-quickstart/section-quickstart.component.html
@@ -1,4 +1,4 @@
-<div [@fadeInOnEnter] class="row">
+<div  class="row">
   @for (quickStart of quickStarts; track quickStart) {
     <div class="col-lg-3 col-6 p-25">
       <new-challenge-button
