--- a/src/app/modules/challenges/pages/user-statistics/section-profile/section-profile.component.html
+++ b/src/app/modules/challenges/pages/user-statistics/section-profile/section-profile.component.html
@@ -4,7 +4,7 @@
       <spinner></spinner>
     </div>
   } @else {
-    <div [@fadeInOnEnter] class="card-body">
+    <div  class="card-body">
       <div class="text-center">
         <div class="avatar p-50 bg-primary">
           <div class="avatar-content">
