--- a/src/app/modules/challenges/pages/user-statistics/section-rating-changes/section-rating-changes.component.html
+++ b/src/app/modules/challenges/pages/user-statistics/section-rating-changes/section-rating-changes.component.html
@@ -4,7 +4,7 @@
       <spinner></spinner>
     </div>
   } @else {
-    <div [@fadeInOnEnter]>
+    <div >
       <div class="card-header">
         <div class="card-title">
           {{ 'RatingChanges' | translate }}
