--- a/src/app/modules/contests/components/contest-card/contest-card/top3-contestants/top3-contestants.component.html
+++ b/src/app/modules/contests/components/contest-card/contest-card/top3-contestants/top3-contestants.component.html
@@ -1,5 +1,5 @@
 @if (top3Contestants.length > 0) {
-  <div [@fadeInOnEnter] class="mt-2 row">
+  <div  class="mt-2 row">
     @if (top3Contestants.length > 1) {
       <div class="col contestant mt-1">
         <img width="32" height="32" src="assets/images/icons/contest-medal-2.png">
