--- a/src/app/modules/home/activity-section/activity-section.component.html
+++ b/src/app/modules/home/activity-section/activity-section.component.html
@@ -1,5 +1,5 @@
 @if (statistics) {
-  <div [@fadeInOnEnter] class="card">
+  <div class="card">
     <div class="card-header">
       <div class="card-title">
         {{ 'Activity' | translate }}
