--- a/src/app/modules/home/header-section/header-section.component.html
+++ b/src/app/modules/home/header-section/header-section.component.html
@@ -8,12 +8,12 @@
 
     <div class="card-img-overlay d-flex flex-column p-0">
       <div class="card-header justify-content-center">
-        <h1 [@fadeInOnEnter] class="card-title text-fixed-white">
+        <h1  class="card-title text-fixed-white">
           {{ 'Welcome' | translate }}, {{ currentUser?.firstName || currentUser?.username }}
         </h1>
       </div>
       <div class="card-body">
-        <h3 [@fadeInOnEnter] class="text-center text-fixed-white">
+        <h3  class="text-center text-fixed-white">
           {{ 'HomePageTitle' | translate }}
         </h3>
       </div>
