--- a/src/app/modules/home/ranks-section/ranks-section.component.html
+++ b/src/app/modules/home/ranks-section/ranks-section.component.html
@@ -15,7 +15,7 @@
             <div class="left">
               <div class="card-icon">
                 <kep-icon
-                  [color]="$index <= 1 ? 'info' : 'primary'"
+                  color="primary"
                   [name]="rank.icon"
                   class=""
                   type="duotone"/>
@@ -27,7 +27,7 @@
 
             <div class="right" container="body" [ngbTooltip]="informationTooltip">
               <kep-icon
-                [color]="$index <= 1 ? 'info' : 'primary'"
+                color="primary"
                 class=""
                 name="question"
                 type="duotone"/>
