--- a/src/app/modules/lugavar/lugavar.component.html
+++ b/src/app/modules/lugavar/lugavar.component.html
@@ -1,9 +1,9 @@
 <div class="lugavar-page-top">
   <div class="text-center mt-3">
-    <div [@fadeInUpOnEnter] class="avatar avatar-lg bg-primary p-2 avatar-rounded m-0 mb-1">
+    <div  class="avatar avatar-lg bg-primary p-2 avatar-rounded m-0 mb-1">
       <i [data-feather]="'bookmark'" class="font-large-1"></i>
     </div>
-    <h2 [@fadeInUpOnEnter] class="mt-1">
+    <h2  class="mt-1">
       <div class="text-fixed-white">{{ 'Lugavar' | translate }}</div>
     </h2>
   </div>
@@ -13,7 +13,7 @@
       [availableLanguages]="[{lang: 'py', codeTemplate: dailyTrick.codeTemplate}]">
     </code-editor-modal>
 
-    <div [@fadeInOnEnter] class="col-lg-8 col-12 offset-0 offset-lg-2">
+    <div  class="col-lg-8 col-12 offset-0 offset-lg-2">
       <kep-card customClass="gradient-border lugavar-shadow">
         <div class="card-header">
           <h2 class="card-title">
