--- a/src/app/modules/problems/pages/problems/sections/section-study-plans/section-study-plans.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-study-plans/section-study-plans.component.html
@@ -1,5 +1,5 @@
 @if (studyPlans.length > 0) {
-  <div [@fadeInLeftOnEnter]>
+  <div >
     <h3 class="text-white d-md-block d-none">
       {{ 'StudyPlans' | translate }}
     </h3>
