--- a/src/app/modules/testing/ui/components/test-card/test-card.component.html
+++ b/src/app/modules/testing/ui/components/test-card/test-card.component.html
@@ -1,4 +1,4 @@
-<a [@fadeInLeftOnEnter] routerLink="test/{{ test.id }}">
+<a  routerLink="test/{{ test.id }}">
   <div class="card bg-chapter-{{ test.chapter.id }}">
     <div class="card-header d-block">
       <div class="chapter-title">
