--- a/src/app/modules/testing/ui/components/test-list-card/test-list-card.component.html
+++ b/src/app/modules/testing/ui/components/test-list-card/test-list-card.component.html
@@ -1,5 +1,5 @@
 <a routerLink="test/{{ test.id }}">
-  <div [@fadeInOnEnter] class="card bg-gradient-chapter-{{ test.chapter.id }}">
+  <div  class="card bg-gradient-chapter-{{ test.chapter.id }}">
     <div class="card-header">
       <div class="card-title">
         <div class="chapter-image">
