--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.html
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.html
@@ -1,6 +1,6 @@
 <ng-template #popContent>
   @if (user && userRatings) {
-    <kep-card [@fadeInOnEnter]>
+    <kep-card >
       <img
         [src]="user.coverPhoto"
         class="img-fluid card-img-top"
