--- a/src/app/modules/blog/pages/blog-list/blog-list.component.html
+++ b/src/app/modules/blog/pages/blog-list/blog-list.component.html
@@ -5,7 +5,7 @@
       <div class="col-lg-9 col-md-6 col-sm-12 order-md-1 order-2">
         <div class="row">
           @for (blogPost of pageResult?.data;track blogPost) {
-            <div [@fadeInLeftOnEnter] class="col-lg-6 col-12">
+            <div  class="col-lg-6 col-12">
               <blog-post-card [blog]="blogPost"></blog-post-card>
             </div>
           }
