--- a/src/app/modules/problems/pages/problem/problem.component.html
+++ b/src/app/modules/problems/pages/problem/problem.component.html
@@ -20,7 +20,7 @@
         </button>
       </div>
     </app-content-header>
-    <section [@fadeInOnEnter] class="mt-2">
+    <section  class="mt-2">
       <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12">
           <kep-card>
