--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <div [@fadeInUpOnEnter]
+  <div
        class="avatar avatar-lg bg-primary p-50 m-0 mb-1">
     <div class="text-white">
       <div class="avatar-content">
@@ -8,10 +8,10 @@
     </div>
   </div>
 
-  <h2 [@fadeInUpOnEnter] class="mt-1 text-white">{{ 'Problems' | translate }}</h2>
-  <div [@fadeInUpOnEnter] class="mt-2 text-white">{{ 'ProblemsPageTitleText' | translate }}</div>
+  <h2  class="mt-1 text-white">{{ 'Problems' | translate }}</h2>
+  <div  class="mt-2 text-white">{{ 'ProblemsPageTitleText' | translate }}</div>
 
-  <div [@fadeInUpOnEnter] class="mt-2">
+  <div  class="mt-2">
     <a routerLink="rating" class="btn btn-primary mr-md-1 me-1">
       <kep-icon name="rating"></kep-icon>
       {{ 'Rating' | translate }}
@@ -29,7 +29,7 @@
   <div class="mt-2 col-lg-8 col-12 offset-lg-2 offset-0">
     <div class="row">
       <div class="col-12 col-md-6">
-        <a [@fadeInLeftOnEnter] class="card card-info" routerLink="/learn/blog/post/52">
+        <a  class="card card-info" routerLink="/learn/blog/post/52">
           <div class="card-header">
             <div class="card-title">
               {{ 'AboutProblems' | translate }}
