--- a/src/app/modules/projects/ui/pages/project-detail/project-detail.page.html
+++ b/src/app/modules/projects/ui/pages/project-detail/project-detail.page.html
@@ -10,7 +10,7 @@
       <section class="mt-2">
         <div class="row">
 
-          <div [@fadeInLeftOnEnter] class="col-lg-9 col-md-12 col-sm-12">
+          <div  class="col-lg-9 col-md-12 col-sm-12">
             <kep-card [customClass]="'project-detail-' + data.id">
               <div class="card-header">
                 <ul ngbNav #navWithIcons="ngbNav" class="nav-tabs" [(activeId)]="activeId">
