--- a/src/app/modules/projects/ui/pages/projects-list/projects-list.page.html
+++ b/src/app/modules/projects/ui/pages/projects-list/projects-list.page.html
@@ -11,7 +11,7 @@
         }
       } @else {
         @for (project of projects; track project.id) {
-          <div [@fadeInOnEnter] class="col-lg-4 col-md-6 col-12">
+          <div  class="col-lg-4 col-md-6 col-12">
             <project-card [project]="project"></project-card>
           </div>
         }
